@@ -1,4 +1,5 @@
 libmpdclient 2.4 (2010/??/??)
+* configure.ac, resolver: implement flag --disable-tcp
 
 
 libmpdclient 2.3 (2010/05/25)
